added an Azeret Mono font and header section

--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">">
+    <title>My first assignment</title>
+    <link rel="stylesheet" href="Styels/styel.css">
 </head>
-<body>
+<body class="azeret-mono-uniquifier">
     
+    <header class="head-1">
+        
+        <nav class="head-conteinar">
+            <img class="img-hero" src="B10A1-Challenge-Begins/assets/Group.png" alt=""> 
+            <h1 class="headline">"In the near future, I hope to become a Developer."</h1>
+            <p class="h-phera"> a person or company that creates new products, especially computer products such as software. I will help People by creating Modern Web System. I will help People by creating Modern Web System</p>
+            <a href="#footer-title">
+            <button class="btn">Contact with me</button>
+            </a>
+        </nav>
+    </header>
 </body>
 </html>
